--- a/src/input.css
+++ b/src/input.css
@@ -2,3 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+.creative_row_1 {
+    @apply w-full h-[20%] flex flex-row justify-evenly items-center gap-5;
+  }
+
+.card{
+    @apply w-[18%] h-[90%] flex justify-center items-center flex-col -bg--text ;
+}
+
+.card_img{
+    @apply w-[80%] h-[50%] -bg--btn;
+}
+
+.card_txt{
+    @apply w-[80%] h-[50%] text-center flex justify-center items-center text-[0.8rem] font-sans font-semibold -bg--bkg cursor-pointer;
+}
